                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 10-03-2005 added: Dynamic Range compensation for AC3 if no AC3/DTS receiver is available.
  - 09-03-2005 changed: music files, duration of files without tags is shown when tag reading is enabled
  - 09-03-2005 fixed: Only the first python control was reading from references.xml correctly.
  - 09-03-2005 fixed: Memory of loaded picture was not cleared correctly on Slideshow exit.
  - 09-03-2005 fixed: Upgrade code incorrectly returned false if the database was empty.
  - 09-03-2005 added: Default options for viewmode, brightness, contrast + gamma.
  - 09-03-2005 added: Resume playback option to video context menu.  It will remember where you were last at in a video, and return there when you select this option.
  - 09-03-2005 fixed: Flickering screen after right thumbstick -> system info while watching a video
  - 09-03-2005 removed: old scanning code in music
  - 08-03-2005 fixed: IMDb thumb was not saved for folder lookups if the folder contained no files.
  - 08-03-2005 fixed: Removed "fuzzy matching" code in video database - fixes same thumb used for The Matrix and The Matrix 2.
  - 08-03-2005 added: Dim LCD backlight if LED is set to off on video playback.  Thanks to Babyblue.
  - 08-03-2005 updated: Italian language file (Thnx to kotix)
  - 08-03-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 08-03-2005 added: infolabel values, MusicPlayer.TimeRemaining and VideoPlayer.TimeRemaining
  - 08-03-2005 fixed: music nav, getting content of the root dirs fails with none english languages